# agent-team

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  TOOL_CALLING_PLAN.md  UV_SETUP.md
.github/workflows/: ci.yml  release.yml
backend/: .env.example  API.md  Cargo.toml  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tauri.conf.json
backend/app/: __init__.py  config.py  main.py  store.py
backend/app/agents/: __init__.py  base.py  coordinator.py  factory.py
backend/app/api/: error_handlers.py
backend/app/api/routes/: agents.py  executions.py  llm.py  models.py  teams.py
backend/app/communication/: __init__.py  message_bus.py  shared_state.py
backend/app/llm/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  openai_compatible.py  router.py
backend/app/orchestration/: __init__.py  base.py  custom.py  debate.py  pipeline.py  roundtable.py
backend/app/schemas/: __init__.py  agent.py  common.py  execution.py  llm.py  team.py
backend/app/services/: __init__.py  agent_service.py  execution_service.py  llm_service.py  team_service.py
backend/assets/: defaults.json
backend/capabilities/: default.json
backend/icons/: icon.icns
backend/scripts/: smoke_roundtable.py
backend/src/: error.rs  lib.rs  main.rs  seed.rs  state.rs
backend/src/agents/: instance.rs  mod.rs
backend/src/commands/: agents.rs  executions.rs  fs.rs  llm.rs  mod.rs  teams.rs
backend/src/llm/: anthropic.rs  factory.rs  mod.rs  openai_compatible.rs  provider.rs
backend/src/models/: agent.rs  common.rs  execution.rs  llm.rs  mod.rs  team.rs
backend/src/orchestration/: debate.rs  event.rs  mod.rs  pipeline.rs  roundtable.rs  state.rs  tool_events.rs
backend/src/store/: sqlite.rs
backend/src/tools/: definition.rs  executor.rs  mod.rs  security.rs
backend/src/tools/builtin/: code.rs  files.rs  mod.rs  search.rs  text.rs
docs/screenshots/: README.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/Agent/: AgentForm.tsx  index.ts
frontend/src/components/Common/: Layout.tsx  PixelLogo.tsx
frontend/src/components/Execution/: ExecutionChat.tsx  ExecutionWorkspacePanel.tsx  index.ts
frontend/src/components/ModelConfig/: ModelConfigForm.tsx  ModelConfigManager.tsx
frontend/src/components/Team/: TeamForm.tsx  index.ts
frontend/src/hooks/: index.ts  useAgents.ts  useExecution.ts  useModelConfigs.ts  useTeams.ts
frontend/src/pages/: AgentsPage.tsx  ExecutionPage.tsx  HomePage.tsx  TeamsPage.tsx
frontend/src/services/: api.ts  modelConfigStore.ts  tauri.ts
frontend/src/stores/: appStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: errors.ts
