[project]
name = "agent-team"
version = "0.1.0"
description = "agent-team - Create and orchestrate AI agent teams"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.0.0",
    "openai>=1.57.0",
    "anthropic>=0.40.0",
    "httpx>=0.28.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
